// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: multi-select-option and cssVarScaling: var(--p-internal-multi-select-scaling, 1) 1`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 4px);
  padding-inline: var(--p-internal-multi-select-option-padding-left, calc(16.8px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 6px)) calc(16.8px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 6px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted, .no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role=option] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--disabled {
    color: GrayText;
  }
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}
"
`;

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: multi-select-option and cssVarScaling: var(--p-internal-multi-select-scaling, 1) 2`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 4px);
  padding-inline: var(--p-internal-multi-select-option-padding-left, calc(16.8px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 6px)) calc(16.8px * (var(var(--p-internal-multi-select-scaling, 1)) - 0.64285714) + 6px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted, .no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role=option] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--disabled {
    color: GrayText;
  }
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}
"
`;

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: select-option and cssVarScaling: var(--p-internal-select-scaling, 1) 1`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 4px);
  padding-inline: var(--p-internal-select-option-padding-left, calc(16.8px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 6px)) calc(16.8px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 6px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted, .no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role=option] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--disabled {
    color: GrayText;
  }
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}
"
`;

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: select-option and cssVarScaling: var(--p-internal-select-scaling, 1) 2`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 4px);
  padding-inline: var(--p-internal-select-option-padding-left, calc(16.8px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 6px)) calc(16.8px * (var(var(--p-internal-select-scaling, 1)) - 0.64285714) + 6px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted, .no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role=option] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--disabled {
    color: GrayText;
  }
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
}
"
`;
